# MLOPS_Taller2

./: README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.jupyter
models/: knn.joblib  registry.json  rf.joblib
notebooks/: entrenamiento_pinguinos.ipynb
