[project]
name = "penguin-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.4",
    "numpy>=2.4.2",
    "palmerpenguins>=0.1.6",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
